--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "mysql2": "^2.2.5",
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.16",
     "sequelize": "^6.3.5"
   }
 }
