--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^2.2.5",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.16",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sequelize-msnodesqlv8": "^0.2.6-beta.8"
   }
 }
