--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.16",
     "sequelize": "^6.3.5",
-    "sequelize-msnodesqlv8": "^0.2.6-beta.8"
+    "sequelize-msnodesqlv8": "^0.2.6-beta.8",
+    "tedious": "^9.2.1"
   }
 }
